# AI-NativeV3

./: .env.example  .gitignore  01-fixes-codigo-chicos.md  BUGS-PILOTO.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PRODUCT.md  README.md  biome.json  conftest.py  historias.md  package.json  paper-draft.md  pnpm-lock.yaml  pyproject.toml  reglas.md
.atl/: skill-registry.md
.claude/: settings.local.json
.dev-logs/: pids.txt
.github/workflows/: ci.yml  deploy.yml  e2e-smoke.yml
.playwright-mcp/: page-2026-05-05T18-31-35-831Z.yml  page-2026-05-05T19-03-03-892Z.yml  page-2026-05-06T01-10-32-791Z.yml  page-2026-05-06T01-10-44-594Z.yml  page-2026-05-06T01-11-34-182Z.yml  page-2026-05-06T01-11-51-841Z.yml  page-2026-05-06T01-12-15-442Z.yml  page-2026-05-06T01-12-27-217Z.yml  page-2026-05-06T01-13-44-391Z.yml  page-2026-05-06T01-14-03-589Z.yml  page-2026-05-06T01-14-19-784Z.yml  page-2026-05-06T01-14-29-494Z.yml  page-2026-05-06T01-14-53-403Z.yml  page-2026-05-06T01-15-15-342Z.yml  page-2026-05-06T21-33-44-971Z.yml  page-2026-05-06T21-34-40-798Z.yml  page-2026-05-06T21-35-12-807Z.yml  page-2026-05-06T21-35-22-719Z.yml  page-2026-05-06T21-35-38-178Z.yml  page-2026-05-06T21-36-17-681Z.yml  page-2026-05-06T21-37-02-659Z.yml  page-2026-05-06T21-37-36-499Z.yml  page-2026-05-06T21-38-09-780Z.yml  page-2026-05-06T21-38-24-179Z.yml  page-2026-05-06T21-39-55-333Z.yml  page-2026-05-06T21-40-21-160Z.yml  page-2026-05-06T21-40-33-833Z.yml  page-2026-05-06T21-41-05-053Z.yml  page-2026-05-06T21-41-18-349Z.yml  page-2026-05-06T21-42-09-770Z.yml  page-2026-05-06T21-42-24-824Z.yml  page-2026-05-06T21-43-10-020Z.yml  page-2026-05-06T21-43-31-302Z.yml  page-2026-05-06T21-43-50-489Z.yml  page-2026-05-06T21-43-56-719Z.yml  page-2026-05-06T21-44-22-368Z.yml  page-2026-05-06T21-44-30-771Z.yml  page-2026-05-06T21-44-53-042Z.yml  page-2026-05-06T21-45-01-167Z.yml  page-2026-05-06T21-45-20-258Z.yml  (+38 more)
AI-NativeV3-main/: CLAUDE.md  pnpm-lock.yaml  ~$disto1.docx  ~$ejoras.docx
AI-NativeV3-main/docs/: CAPABILITIES.md  SESSION-LOG.md  limitaciones-declaradas.md
AI-NativeV3-main/scripts/: seed-3-comisiones.py
ai-native-prompts/: manifest.yaml
apps/academic-service/: pyproject.toml
apps/ai-gateway/: pyproject.toml
apps/content-service/: pyproject.toml
apps/ctr-service/: pyproject.toml
apps/enrollment-service/: Dockerfile  README.md  pyproject.toml
apps/enrollment-service/src/enrollment_service/: __init__.py  config.py  main.py  observability.py
apps/enrollment-service/src/enrollment_service/routes/: __init__.py  health.py  imports.py
apps/enrollment-service/src/enrollment_service/services/: __init__.py  csv_import.py
apps/enrollment-service/tests/: test_health.py
apps/evaluation-service/: pyproject.toml
apps/identity-service/: Dockerfile  README.md  pyproject.toml
apps/integrity-attestation-service/: pyproject.toml
apps/web-admin/: package.json  vite.config.ts  vite.config.ts.timestamp-1776729678826-35a821725f8df.mjs
apps/web-student/: package.json  vite.config.ts  vite.config.ts.timestamp-1776729678824-954073097c3568.mjs
apps/web-teacher/: package.json  vite.config.ts  vite.config.ts.timestamp-1776729678848-f01049555b24c.mjs
docs/: F1-STATE.md  F6-STATE.md  F7-STATE.md  SESSION-LOG.md  architecture.md
docs/adr/: 003-separacion-bases-logicas.md  018-cii-evolution-longitudinal.md  README.md  (+2 more)
examples/: unsl_onboarding.py
infrastructure/: docker-compose.dev.yml
scripts/: check-health.sh  check-rls.py  dev-start-all.sh  eval-retrieval.py  generate_frontends.py  generate_python_services.py  migrate-all.sh  seed-3-comisiones.py  seed-demo-data.py  verify-attestations.py
(+471 files in other folders)
