[project]
name = "platform-monorepo"
version = "0.1.0"
description = "Plataforma académica multi-universidad - raíz del monorepo Python"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "apps/api-gateway",
    "apps/identity-service",
    "apps/academic-service",
    "apps/enrollment-service",
    "apps/evaluation-service",
    "apps/analytics-service",
    "apps/tutor-service",
    "apps/ctr-service",
    "apps/classifier-service",
    "apps/content-service",
    "apps/governance-service",
    "apps/ai-gateway",
    "packages/contracts",
    "packages/test-utils",
    "packages/observability",
    "packages/platform-ops",
]

[tool.uv.sources]
platform-contracts = { workspace = true }
platform-test-utils = { workspace = true }
platform-observability = { workspace = true }
platform-ops = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "migrations", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "RUF",  # ruff-specific
    "PL",   # pylint
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (OK in tests)
    "PLR0913", # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "PLR2004"]
"**/migrations/**" = ["E501", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "\\.venv/", "dist/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: integration tests (require testcontainers)",
    "adversarial: adversarial tests against the tutor (informative)",
    "slow: slow tests (>5s)",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "**/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
